--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Trang web bán đĩa nhạc </title>
 </head>
 <body>
      <header>
         <div class="logo">
-            <img src="images/logo.jpg" alt="#" height="100">
+            <img src="images/logo.png" alt="#" height="100">
         </div>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="menu">
-            <a class="dropdown" href="">Thể loại</a> 
+            <a class="dropdown" data-bs-toggle="dropdown" href="">Thể loại</a> 
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="">EDM</a></li>
                     <li><a class="dropdown-item" href="">Ballad</a></li>
@@ -27,8 +28,8 @@
         </div>
         <div class="khac">
         <li><input placeholder="Find Song" type="text"><a href=""></a></i> </li>
-        <li><i  class="bi bi-bag"></i><a  href="#">Gio hang</a></li>
-        <li><i  class="bi bi-bag"></i><a  href="#">Gio hang</a></li>
+        <li><i  class="bi bi-bag"></i><a  href="#"></a></li>
+        <li><i  class="bi bi-person"></i><a  href="#"></a></li>
         </div>
         </nav>
      </header>
