--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                     <li><a class="dropdown-item" href="">Ballad</a></li>
                     <li><a class="dropdown-item" href="">Pop</a></li> 
                 </ul>
-              </>
             <li><a href="">Nghệ Sĩ</a></li>
             <li><a href="">Năm phát hành</a> </li>
             <li><a href="">Thông tin</a></li>
@@ -61,6 +60,13 @@
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     </script>
+ 
 </body>
+<footer>
+  <li><a href="">Giới Thiệu</a></li>
+  <li><a href="#">Liên hệ</a></li>
+  <p>Author: Tuấn Anh & Tiến Đạt</p>
+  <p><a href="mailto:hothantuanbo2003@gmail.com">hothantuanbo2003@gmail.com</a></p>
+</footer>
 
 </html>
